tests/ui/direct_configuration-f-1.stderr
error: Unknown field: `direc`. Did you mean `direct`?
 --> $DIR/direct_configuration-f-1.rs:8:17
  |
8 | #[configuration(direc)]
  |                 ^^^^^
